After much pain, got mp4 exports of holomaps working. Very brittle.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180918 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180918 Burst analysis.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "%load_ext line_profiler\n",
     "%load_ext snakeviz\n",
-    "hv.extension(\"bokeh\")\n",
+    "hv.extension(\"bokeh\", \"matplotlib\")\n",
     "%matplotlib inline\n",
     "tqdm.monitor_interval = 0\n",
     "asyncio.get_event_loop().set_debug(True)\n",
@@ -795,8 +795,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_pixel_funcs = {\"hhh\": None}\n",
-    "mask_funcs = {\"_save\": None}\n",
+    "trenchwise_funcs = {\"_save\": None}\n",
+    "framewise_funcs = {\"_save\": None}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pixelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\", \"p0.95\"): partial(\n",
+    "        np.percentile, q=(30, 50, 70, 90, 95)\n",
+    "    ),\n",
+    "}\n",
+    "\n",
+    "analyze_pixels = partial(workflow.map_over_labels, pixelwise_funcs)\n",
+    "\n",
+    "trenchwise_funcs = {\"_save\": None, \"sharpness\": image.sharpness, **pixelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **pixelwise_funcs}\n",
+    "\n",
+    "mask_funcs = {\n",
+    "    \"_save\": None,\n",
+    "    \"erode3\": compose(\n",
+    "        analyze_pixels,\n",
+    "    ),\n",
+    "    \"noerode\": None,\n",
+    "}\n",
+    "\n",
     "trenchwise_funcs = {\"labelwise\": None}"
    ]
   },
@@ -1191,10 +1221,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/TrErr002_noBF.nd2',:],:]\n",
     "labelwise_selected = labelwise_df.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2\", :], :\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr002_noBF.nd2\", :], :\n",
     "]\n",
+    "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2',:],:]\n",
     "# labelwise_selected = labelwise_df.loc[IDX['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2.nd2',:],:]"
    ]
   },
@@ -1499,7 +1529,7 @@
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'] <= 200) & (cell_sized_with_ts['bright_ts_bg_20'] >= 2)]\n",
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'].between(120, 130)) & (cell_sized_with_ts['bright_ts_bg_20'] >= 1)]\n",
     "detected_bursts3 = cell_sized_with_ts[\n",
-    "    (cell_sized_with_ts[\"bright_ts_median_t_50\"] >= 100)\n",
+    "    (cell_sized_with_ts[\"bright_ts_median_t_50\"] >= 3)\n",
     "]"
    ]
   },
@@ -1784,6 +1814,98 @@
     "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
     "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
     ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movies to MPEG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scatter_movie(labelwise_df, params, ts):\n",
+    "    df = pd.concat(\n",
+    "        workflow.select_dataframe(labelwise_df, params, t=t, label=slice(None))\n",
+    "        for t in ts\n",
+    "    )\n",
+    "    plot = hv.Scatter(df, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"label\"])\n",
+    "    plot = plot.options(\"Scatter\", s=20, color_index=\"label\", cmap=\"Category20\")\n",
+    "    return plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(\"matplotlib.animation\")\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "# logger.setLevel(logging.WARN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "%%output size=200 backend='matplotlib'# holomap='mp4'\n",
+    "key = tuple(getattr(label_stream, attr) for attr in trench_key)\n",
+    "index = detected_bursts.groupby(trench_key).get_group(key).index\n",
+    "ts = index._get_level_values(index._get_level_number(\"t\"), unique=True)\n",
+    "ts = list(range(5))\n",
+    "\n",
+    "\n",
+    "movie = (\n",
+    "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
+    "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
+    "    + scatter_movie(labelwise_df, label_stream.contents, ts)\n",
+    "    * hv.HoloMap({t: hv.VLine(t).options(color=\"red\") for t in ts})\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib' holomap='mp4' size=400\n",
+    "movie  # .options(height=400, backend='matplotlib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "df = workflow.select_dataframe(\n",
+    "    labelwise_df, label_stream.contents, t=slice(None), label=slice(None)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200 backend='matplotlib'\n",
+    "plot = hv.Scatter(df, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"label\"])\n",
+    "plot = plot.options(\"Scatter\", s=20, color_index=\"label\", cmap=\"Category20\")\n",
+    "plot"
    ]
   },
   {
