--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180919 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180919 Burst analysis.ipynb
@@ -53,6 +53,7 @@
     "import scipy\n",
     "from glob import glob\n",
     "import asyncio\n",
+    "from IPython.display import Video\n",
     "\n",
     "IDX = pd.IndexSlice"
    ]
@@ -94,7 +95,7 @@
    "source": [
     "%load_ext line_profiler\n",
     "%load_ext snakeviz\n",
-    "hv.extension(\"bokeh\")\n",
+    "hv.extension(\"bokeh\", \"matplotlib\")\n",
     "%matplotlib inline\n",
     "tqdm.monitor_interval = 0\n",
     "asyncio.get_event_loop().set_debug(True)\n",
@@ -795,8 +796,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_pixel_funcs = {\"hhh\": None}\n",
-    "mask_funcs = {\"_save\": None}\n",
+    "trenchwise_funcs = {\"_save\": None}\n",
+    "framewise_funcs = {\"_save\": None}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pixelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\", \"p0.95\"): partial(\n",
+    "        np.percentile, q=(30, 50, 70, 90, 95)\n",
+    "    ),\n",
+    "}\n",
+    "\n",
+    "analyze_pixels = partial(workflow.map_over_labels, pixelwise_funcs)\n",
+    "\n",
+    "trenchwise_funcs = {\"_save\": None, \"sharpness\": image.sharpness, **pixelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **pixelwise_funcs}\n",
+    "\n",
+    "mask_funcs = {\n",
+    "    \"_save\": None,\n",
+    "    \"erode3\": compose(\n",
+    "        analyze_pixels,\n",
+    "    ),\n",
+    "    \"noerode\": None,\n",
+    "}\n",
+    "\n",
     "trenchwise_funcs = {\"labelwise\": None}"
    ]
   },
@@ -1499,7 +1530,7 @@
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'] <= 200) & (cell_sized_with_ts['bright_ts_bg_20'] >= 2)]\n",
     "# detected_bursts3 = cell_sized_with_ts[(cell_sized_with_ts[yfp+'_bg'].between(120, 130)) & (cell_sized_with_ts['bright_ts_bg_20'] >= 1)]\n",
     "detected_bursts3 = cell_sized_with_ts[\n",
-    "    (cell_sized_with_ts[\"bright_ts_median_t_50\"] >= 100)\n",
+    "    (cell_sized_with_ts[\"bright_ts_median_t_50\"] >= 3)\n",
     "]"
    ]
   },
@@ -1548,8 +1579,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%opts Layout [normalize=False]\n",
     "%%output size=100\n",
+    "%%opts Layout [normalize=False]\n",
     "hover = HoverTool(\n",
     "    tooltips=[\n",
     "        (\"(x,y)\", \"(@x{0[.]0}, @y{0[.]0})\"),\n",
@@ -1657,6 +1688,119 @@
     "p = hv.DynamicMap(callback, streams=[group_stream])\n",
     "sel.source = p\n",
     "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movie output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib'\n",
+    "#%%opts Layout [normalize=False fig_inches=2 vspace=0 aspect_weight=1 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=20]\n",
+    "#%%opts Scatter [aspect=6]\n",
+    "key = tuple(getattr(label_stream, attr) for attr in trench_key)\n",
+    "index = detected_bursts.groupby(trench_key).get_group(key).index\n",
+    "ts = index._get_level_values(index._get_level_number(\"t\"), unique=True)\n",
+    "# ts = list(range(3))\n",
+    "\n",
+    "movie = (\n",
+    "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
+    "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
+    "    + scatter_movie(labelwise_df, label_stream.contents, ts)\n",
+    "    * hv.HoloMap(\n",
+    "        {t: hv.VLine(t).options(color=\"red\", backend=\"matplotlib\") for t in ts}\n",
+    "    )\n",
+    ").cols(1)\n",
+    "movie2 = movie.options(\n",
+    "    {\n",
+    "        \"Layout\": dict(\n",
+    "            normalize=False,\n",
+    "            framewise=True,\n",
+    "            fig_inches=7,\n",
+    "            vspace=0,\n",
+    "            aspect_weight=1,\n",
+    "            sublabel_format=\"\",\n",
+    "            tight=False,\n",
+    "            fontsize=15,\n",
+    "            title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(\n",
+    "                **label_stream.contents\n",
+    "            ),\n",
+    "        ),\n",
+    "        \"Scatter\": dict(aspect=6, s=20),\n",
+    "    },\n",
+    "    backend=\"matplotlib\",\n",
+    ")\n",
+    "m = holomap_to_video(movie2, out=\"/tmp/jqsmovie.mp4\", size=100, dpi=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Video(\"/tmp/jqsmovie.mp4\", embed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib'\n",
+    "%%opts Layout [normalize=False fig_inches=2 vspace=0 aspect_weight=1 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=20]\n",
+    "%%opts Scatter [aspect=6]\n",
+    "key = tuple(getattr(label_stream, attr) for attr in trench_key)\n",
+    "index = detected_bursts.groupby(trench_key).get_group(key).index\n",
+    "# ts = index._get_level_values(index._get_level_number('t'), unique=True)\n",
+    "ts = list(range(3))\n",
+    "\n",
+    "movie = (\n",
+    "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
+    "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
+    "    + scatter_movie(labelwise_df, label_stream.contents, ts)\n",
+    "    * hv.HoloMap(\n",
+    "        {t: hv.VLine(t).options(color=\"red\", backend=\"matplotlib\") for t in ts}\n",
+    "    )\n",
+    ").cols(\n",
+    "    1\n",
+    ")  # .options('Layout', normalize=False)\n",
+    "m = holomap_to_video(movie, out=\"/tmp/jqsmovie.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib'\n",
+    "movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Video(\"/tmp/jqsmovie.mp4\", embed=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other viz"
    ]
   },
   {
@@ -1784,6 +1928,333 @@
     "    trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
     "    + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
     ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movies to MPEG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scatter_movie(labelwise_df, params, ts):\n",
+    "    df = pd.concat(\n",
+    "        workflow.select_dataframe(labelwise_df, params, t=t, label=slice(None))\n",
+    "        for t in ts\n",
+    "    )\n",
+    "    plot = hv.Scatter(df, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"label\"])\n",
+    "    #     plot = plot.options('Scatter',\n",
+    "    #                         s=20,\n",
+    "    #                         color_index='label',\n",
+    "    #                         cmap='Category20')\n",
+    "    plot = plot.options(\n",
+    "        \"Scatter\", s=3, color_index=\"label\", cmap=\"Category20\", backend=\"matplotlib\"\n",
+    "    )\n",
+    "    return plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(\"matplotlib.animation\")\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "# logger.setLevel(logging.WARN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%output backend='matplotlib'\n",
+    "#%%opts Layout [normalize=False]\n",
+    "key = tuple(getattr(label_stream, attr) for attr in trench_key)\n",
+    "index = detected_bursts.groupby(trench_key).get_group(key).index\n",
+    "ts = index._get_level_values(index._get_level_number(\"t\"), unique=True)\n",
+    "# ts = list(range(3))\n",
+    "\n",
+    "movie = (\n",
+    "    (\n",
+    "        trench_movie(trench_bboxes, key, \"MCHERRY\", ts)\n",
+    "        + trench_movie(trench_bboxes, key, \"YFP\", ts)\n",
+    "        + scatter_movie(labelwise_df, label_stream.contents, ts)\n",
+    "        * hv.HoloMap(\n",
+    "            {t: hv.VLine(t).options(color=\"red\", backend=\"matplotlib\") for t in ts}\n",
+    "        )\n",
+    "    )\n",
+    "    .cols(1)\n",
+    "    .options(\"Layout\", normalize=False)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "import imageio\n",
+    "import PIL\n",
+    "\n",
+    "# FROM: https://gist.github.com/drs251/c0c348e88a1cc95e3e70205bff0ed91b\n",
+    "def holomap_to_video(\n",
+    "    hmap, out=None, fps=10, dpi=200, size=None, progress_bar=util.tqdm_auto\n",
+    "):\n",
+    "    #     if out is None:\n",
+    "    #         out = io.BytesIO()\n",
+    "    renderer = hv.renderer(\"matplotlib\")\n",
+    "    if dpi:\n",
+    "        old_dpi = renderer.dpi\n",
+    "        renderer.dpi = dpi\n",
+    "    if size:\n",
+    "        old_size = renderer.size\n",
+    "        renderer.size = size\n",
+    "    # renderer.size = 400\n",
+    "    writer = imageio.get_writer(out, fps=fps, format=\"mp4\")\n",
+    "    if isinstance(hmap, hv.Layout) or isinstance(hmap, hv.NdLayout):\n",
+    "        kdim = hmap[hmap.keys()[0]].kdims[0].name  # TODO: make more elegant/robust\n",
+    "        keys = hmap[hmap.keys()[0]].keys()\n",
+    "        # print(kdim,keys)\n",
+    "        key_items = [(k, hmap.select(**{kdim: k})) for k in keys]\n",
+    "    else:\n",
+    "        key_items = hmap.items()\n",
+    "    if progress_bar:\n",
+    "        key_items = progress_bar(key_items)\n",
+    "    for key, item in key_items:\n",
+    "        # print(\"writing key {}\".format(key))\n",
+    "        #         label = \"\"\n",
+    "        #         if not isinstance(key, tuple):\n",
+    "        #             key = tuple([key])\n",
+    "        #         for value, dim in zip(key, hmap.dimensions()):\n",
+    "        #             dim_label = dim.name + \": \" + dim.pprint_value(value)\n",
+    "        #             if dim.unit != None:\n",
+    "        #                 dim_label += \" \" + dim.unit\n",
+    "        #             if label == \"\":\n",
+    "        #                 label = dim_label\n",
+    "        #             else:\n",
+    "        #                 label += \", \" + dim_label\n",
+    "        #         item = item.relabel(label)\n",
+    "        # out = io.BytesIO()\n",
+    "        # hv.renderer('matplotlib').save(item, out, fmt='png')\n",
+    "        # img = PIL.Image.open(out)\n",
+    "        canvas = renderer.get_plot(item).state.canvas\n",
+    "        canvas.draw()\n",
+    "        ary = np.array(canvas.get_renderer()._renderer)\n",
+    "        #         img = PIL.Image.open(\"_temp.png\")\n",
+    "        #         arr = np.array(img)\n",
+    "        #         if size == None:\n",
+    "        #             size = arr.shape[0:2]\n",
+    "        #         else:\n",
+    "        #             arr = resize_frame(arr, size)\n",
+    "        # print(ary.shape)\n",
+    "        writer.append_data(ary)\n",
+    "    writer.close()\n",
+    "    if dpi:\n",
+    "        renderer.dpi = old_dpi\n",
+    "    if size:\n",
+    "        renderer.size = old_size\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "#    os.remove(\"_temp.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = hv.renderer(\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = r.get_plot(movie2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib'\n",
+    "movie.select(Default=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=400 backend='matplotlib'\n",
+    "%%opts Layout [fig_inches=2 vspace=0 aspect_weight=1 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=20]\n",
+    "#%%opts Scatter [aspect=6 color_index='label'] (s=3)\n",
+    "#%%opts Layout [aspect_weight=1 fig_inches=5 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=50]\n",
+    "movie.select(Default=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%time\n",
+    "#%%output size=400 backend='matplotlib'\n",
+    "#%%opts Layout [aspect_weight=1 fig_inches=5 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=50]\n",
+    "movie2 = movie.options(\n",
+    "    {\n",
+    "        \"Layout\": dict(\n",
+    "            aspect_weight=1,\n",
+    "            vspace=0,\n",
+    "            fig_inches=5,\n",
+    "            sublabel_format=\"\",\n",
+    "            tight=True,\n",
+    "            title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(\n",
+    "                **label_stream.contents\n",
+    "            ),\n",
+    "            fontsize=50,\n",
+    "        ),\n",
+    "        \"Scatter\": dict(aspect=6),\n",
+    "    },\n",
+    "    backend=\"matplotlib\",\n",
+    ")\n",
+    "# m = holomap_to_video(movie2, out='/tmp/jqsmovie2.mp4')\n",
+    "None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie3 = movie.options(\n",
+    "    {\n",
+    "        \"Layout\": dict(\n",
+    "            aspect_weight=1,\n",
+    "            vspace=0,\n",
+    "            fig_inches=5,\n",
+    "            sublabel_format=\"\",\n",
+    "            tight=True,\n",
+    "            title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(\n",
+    "                **label_stream.contents\n",
+    "            ),\n",
+    "            fontsize=50,\n",
+    "        )\n",
+    "    },\n",
+    "    backend=\"matplotlib\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie3 = movie.clone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output backend='matplotlib'\n",
+    "movie.select(Default=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showanyVideo(location):\n",
+    "    import base64\n",
+    "    from IPython.display import HTML\n",
+    "\n",
+    "    ext = \".mp4\"\n",
+    "    video_encoded = base64.b64encode(open(location, \"rb\").read())  # .encode(\"base64\")\n",
+    "    video_tag = '<video width=\"320\" height=\"240\" controls alt=\"test\" src=\"data:video/{0};base64,{1}\">'.format(\n",
+    "        ext, video_encoded\n",
+    "    )\n",
+    "    return HTML(data=video_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(showanyVideo(\"/tmp/jqsmovie.mp4\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=400 backend='matplotlib' #holomap='mp4' fps=10\n",
+    "%%opts Layout [aspect_weight=1 fig_inches=5 sublabel_format='' tight=True title_format=\"{filename:}\\npos: {position:} trench: {trench_set:}.{trench:} t: {t:}\".format(**label_stream.contents) fontsize=50]\n",
+    "movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "df = workflow.select_dataframe(\n",
+    "    labelwise_df, label_stream.contents, t=slice(None), label=slice(None)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200 backend='matplotlib'\n",
+    "plot = hv.Scatter(df, kdims=[\"t\"], vdims=[\"YFP/labelwise/p0.9\", \"label\"])\n",
+    "plot = plot.options(\"Scatter\", s=20, color_index=\"label\", cmap=\"Category20\")\n",
+    "plot"
    ]
   },
   {
